add new pages and bump version to 1.0.3 (build 7)

--- a/www/home.html
+++ b/www/home.html
@@ -1927,7 +1927,8 @@ height: 30px;
             <div class="fara-row-track">
 
               <!-- کارت ۱ -->
-              <div class="fara-item-box">
+              <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
                   <img src="./img/31.png"
                     class="img-fluid rounded-top" alt="">
@@ -1942,38 +1943,45 @@ height: 30px;
                   <p>City • Country</p>
                 </div>
               </div>
+              </a>
 
               <!-- کارت ۲ -->
-              <div class="fara-item-box">
+              <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
-                  <img src="./img/31.png" class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 4.2</div> -->
+                  <img src="./img/31.png"
+                    class="img-fluid rounded-top" alt="">
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
                   <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
-                  <h3>Another Hotel</h3>
-                  <p>Iraq • Slemani</p>
+                  <h3>Hotel Name</h3>
+                  <p>City • Country</p>
                 </div>
               </div>
+              </a>
 
               <!-- کارت ۳ -->
-              <div class="fara-item-box">
+               <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
-                  <img src="./img/31.png" class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 5.0</div> -->
+                  <img src="./img/31.png"
+                    class="img-fluid rounded-top" alt="">
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
                   <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
-                  <h3>Luxury Hotel</h3>
-                  <p>Turkey • Istanbul</p>
+                  <h3>Hotel Name</h3>
+                  <p>City • Country</p>
                 </div>
               </div>
+              </a>
             </div>
           </div>
         </div>
@@ -2022,14 +2030,15 @@ height: 30px;
             <div class="fara-row-track">
 
               <!-- کارت ۱ -->
-              <div class="fara-item-box">
+               <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
                   <img src="./img/31.png"
                     class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 3.5</div> -->
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
                   <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
@@ -2037,38 +2046,45 @@ height: 30px;
                   <p>City • Country</p>
                 </div>
               </div>
+              </a>
 
               <!-- کارت ۲ -->
-              <div class="fara-item-box">
+             <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
-                  <img src="./img/31.png" class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 4.2</div> -->
+                  <img src="./img/31.png"
+                    class="img-fluid rounded-top" alt="">
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
                   <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
-                  <h3>Another Hotel</h3>
-                  <p>Iraq • Slemani</p>
+                  <h3>Hotel Name</h3>
+                  <p>City • Country</p>
                 </div>
               </div>
+              </a>
 
               <!-- کارت ۳ -->
-              <div class="fara-item-box">
+              <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
-                  <img src="./img/31.png" class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 5.0</div> -->
+                  <img src="./img/31.png"
+                    class="img-fluid rounded-top" alt="">
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
                   <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
-                  <h3>Luxury Hotel</h3>
-                  <p>Turkey • Istanbul</p>
+                  <h3>Hotel Name</h3>
+                  <p>City • Country</p>
                 </div>
               </div>
+              </a>
             </div>
           </div>
         </div>
@@ -2105,14 +2121,15 @@ height: 30px;
             <div class="nnn">
 
               <!-- کارت ۱ -->
-              <div class="fara-item-box">
+             <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
                   <img src="./img/31.png"
                     class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 3.5</div> -->
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
                   <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
@@ -2120,38 +2137,45 @@ height: 30px;
                   <p>City • Country</p>
                 </div>
               </div>
+              </a>
 
               <!-- کارت ۲ -->
-              <div class="fara-item-box">
+             <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
-                  <img src="./img/31.png" class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 4.2</div> -->
-                  <div class="fara-price-bar d-flex justify-content-between align-items-center ">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                  <img src="./img/31.png"
+                    class="img-fluid rounded-top" alt="">
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
+                  <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
-                  <h3>Another Hotel</h3>
-                  <p>Iraq • Slemani</p>
+                  <h3>Hotel Name</h3>
+                  <p>City • Country</p>
                 </div>
               </div>
+              </a>
 
               <!-- کارت ۳ -->
-              <div class="fara-item-box">
+              <a href="./informations.html" class="text-decoration-none">
+                <div class="fara-item-box">
                 <div class="fara-img-holder position-relative">
-                  <img src="./img/31.png" class="img-fluid rounded-top" alt="">
-                  <!-- <div class="fara-star-mark position-absolute">✧ 5.0</div> -->
-                  <div class="fara-price-bar d-flex justify-content-between align-items-center ">
-                    <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span>
-                    <div class="fara-price-icon">⤿</div>
+                  <img src="./img/31.png"
+                    class="img-fluid rounded-top" alt="">
+                  <!-- <div class="fara-star-mark position-absolute"><img src="./img/27.png" alt=""> 3.5</div> -->
+                  <div class="fara-price-bar d-flex justify-content-between align-items-center px-3 py-2">
+                    <!-- <span class="fara-price-main">Price <span class="fara-price-sub">/Night</span></span> -->
+                    <div class="fara-price-icon"></div>
                   </div>
                 </div>
                 <div class="fara-info-panel px-3 pb-2">
-                  <h3>Luxury Hotel</h3>
-                  <p>Turkey • Istanbul</p>
+                  <h3>Hotel Name</h3>
+                  <p>City • Country</p>
                 </div>
               </div>
+              </a>
             </div>
           </div>
         </div>
