--- a/home.html
+++ b/home.html
@@ -355,3 +355,206 @@ html,body {
     </div>
   </div>
 </div>
+
+
+
+<div class="booking-card">
+            <div class="card-header">
+                <span class="card-logo">farra</span>
+                <span class="card-number">3F5D-HTRSSE-02</span>
+            </div>
+            <div class="card-content">
+                <h3 class="card-hotel-name">Hotel Name</h3>
+                <div class="card-location">
+                    <span class="card-location-text">City • Country</span>
+                    <a href="#" class="see-contact" id="openContactModal">See Contact</a>
+                </div>
+                <div class="card-footer">
+                    <span class="card-guests">Guests Number : # 2 Adults & 2 days</span>
+                    <span class="card-price">$1460</span>
+                </div>
+            </div>
+            <div class="card-decoration">
+                <i class="fas fa-star"></i>
+            </div>
+        </div>
+
+          /* Booking Card */
+        .booking-card {
+            margin: 0 20px 24px;
+            background: linear-gradient(135deg, #60A5FA 0%, #8B5CF6 100%);
+            border-radius: 24px;
+            padding: 24px;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 0 12px 30px rgba(124, 58, 237, 0.35);
+        }
+
+        .card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 28px;
+        }
+
+        .card-logo {
+            font-size: 18px;
+            font-weight: 700;
+            color: #FFFFFF;
+            font-style: italic;
+        }
+
+        .card-number {
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.85);
+            letter-spacing: 0.5px;
+        }
+
+        .card-content {
+            color: #FFFFFF;
+        }
+
+        .card-hotel-name {
+            font-size: 22px;
+            font-weight: 700;
+            margin-bottom: 6px;
+            letter-spacing: 0.3px;
+        }
+
+        .card-location {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 14px;
+            margin-bottom: 36px;
+        }
+
+        .card-location-text {
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .see-contact {
+            color: #FFFFFF;
+            text-decoration: underline;
+            font-size: 13px;
+            cursor: pointer;
+            font-weight: 500;
+        }
+
+        .card-footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .card-guests {
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.85);
+        }
+
+        .card-price {
+            font-size: 22px;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+        }
+
+        .card-decoration {
+            position: absolute;
+            bottom: 24px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: rgba(255, 255, 255, 0.12);
+            font-size: 28px;
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <?xml version='1.0' encoding='utf-8'?>
+
+<widget id="com.farra.app" version="1.0.4" ios-CFBundleVersion="6" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+
+
+    <name>farra</name>
+    <description>Farra App - finds the place</description>
+    <author email="dev@cordova.apache.org" href="https://cordova.apache.org">
+        Apache Cordova Team
+    </author>
+
+    <!-- صفحه اولیه -->
+    <content src="splash.html" />
+
+    <!-- دسترسی‌ها -->
+    <allow-intent href="http://*/*"/>
+    <allow-intent href="https://*/*"/>
+
+    <!-- تنظیمات ظاهری -->
+    <preference name="StatusBarBackgroundColor" value="#383838ff"/>
+    <preference name="StatusBarStyle" value="default"/>
+    <preference name="Fullscreen" value="true"/>
+    <preference name="Orientation" value="portrait"/>
+
+    <!-- نمایش/پنهان‌سازی اسپلش پیش‌فرض -->
+    <preference name="ShowSplashScreen" value="false"/>
+    <preference name="AutoHideSplashScreen" value="true"/>
+    <preference name="SplashScreenDelay" value="0"/>
+<preference name="StatusBarOverlaysWebView" value="true" />
+<preference name="allowInlineMediaPlayback" value="true" />
+
+    <!-- ====================== ANDROID ====================== -->
+    <platform name="android">
+
+        <!-- آیکون‌ها -->
+        <icon src="www/resources/48-48.jpg" density="mdpi"/>
+        <icon src="www/resources/72-72.jpg" density="hdpi"/>
+        <icon src="www/resources/96-96.jpg" density="xhdpi"/>
+        <icon src="www/resources/144-144.jpg" density="xxhdpi"/>
+        <icon src="www/resources/192-192.jpg" density="xxxhdpi"/>
+
+        <!-- مجوزها -->
+        <uses-permission android:name="android.permission.BLUETOOTH"/>
+        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+        <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+        <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+        <!-- قابلیت سخت‌افزاری GPS -->
+        <uses-feature android:name="android.hardware.location.gps"/>
+
+        <!-- جلوگیری از تأثیر دارک‌مود (تنظیم در AndroidManifest.xml به‌صورت پایدار) -->
+        <edit-config file="AndroidManifest.xml" mode="merge" target="/manifest/application/@android:forceDarkAllowed">
+            false
+        </edit-config>
+
+    </platform>
+
+    <!-- ======================= iOS ======================== -->
+    <platform name="ios">
+        <!-- توضیحات مجوز بلوتوث -->
+        <edit-config mode="merge" target="NSBluetoothAlwaysUsageDescription">
+            <string>اپ برای کنترل چراغ نیاز به بلوتوث دارد.</string>
+        </edit-config>
+        <edit-config mode="merge" target="NSBluetoothPeripheralUsageDescription">
+            <string>ارسال/دریافت وضعیت چراغ هوشمند</string>
+        </edit-config>
+
+        <!-- آیکون‌ها -->
+        <icon src="www/resources/120-120.jpg" width="120" height="120"/>
+        <icon src="www/resources/180-180.jpg" width="180" height="180"/>
+        <icon src="www/resources/1024-1024.jpg" width="1024" height="1024"/>
+    </platform>
+
+</widget>
