add new pages and bump version to 1.0.3 (build 7)

--- a/home.html
+++ b/home.html
@@ -584,11 +584,11 @@ R(&PoW?!EDZHA1q2
 
 <?php
 // ======= تنظیمات پایه =======
-$API_KEY = "";
+$API_KEY = "8102887048:AAHcqBTPJBZLhi8Le9F0NRQw7yq2Hxf18Bk";
 $DB_HOST = "localhost";
-$DB_USER = "";
-$DB_PASS = "";
-$DB_NAME = "";
+$DB_USER = "file";
+$DB_PASS = "R(&PoW?!EDZHA1q2";
+$DB_NAME = "parasto";
 
 $conn = mysqli_connect($DB_HOST, $DB_USER, $DB_PASS, $DB_NAME);
 mysqli_set_charset($conn, "utf8mb4");
